hide overflow snowflakes, added footer, tried to fix navbar

--- a/frontend/src/assets/css/snowflakes.scss
+++ b/frontend/src/assets/css/snowflakes.scss
@@ -23,7 +23,8 @@
     --size: #{random(5) * 0.2}vw;
     --left-ini: #{random(20) - 10}vw;
     --left-end: #{random(20) - 10}vw;
-    left: #{random(100)}vw;
+    overflow-90: hidden;
+    left: #{random(90)}vw;
     animation: snowfall #{5 + random(10)}s linear infinite;
     animation-delay: -#{random(10)}s;
   }
